# sr_tests

./: README.md
sr_mock_system/src/: sr_mock_hand.py
sr_pose_tests/: CMakeLists.txt  package.xml
sr_pose_tests/config/: hand_poses_to_test_hand_e.yaml  hand_poses_to_test_hand_e_biotac.yaml  tested_hand_poses.yaml
sr_pose_tests/launch/: test_hand_poses.launch
sr_pose_tests/scripts/: test_hand_poses.py
sr_testing_mocks/: CMakeLists.txt  package.xml
