<?xml version="1.0"?>
<package format="2">
  <name>sr_pose_tests</name>
  <version>0.0.0</version>
  <description>The sr_pose_tests package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's Software Team</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
